<resources>
    <string name="app_name" translatable="false">ReallyBasicVocab</string>
    <string name="app_name_short" translatable="false">R5B4 Vocab</string>
    <string name="licenses_emoji_project_id" translatable="false">🆔</string>
    <string name="licenses_emoji_project_dev" translatable="false">🧑</string>
    <string name="licenses_emoji_project_url" translatable="false">🌐</string>
    <string name="licenses_emoji_project_code" translatable="false">📜</string>
    <string name="licenses_emoji_license_short" translatable="false">⚖️</string>
    <string name="licenses">Licenses</string>
    <string name="online_help">Online help</string>
    <string name="settings">Settings</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="error">error</string>
    <string name="error_values">error – did you fill all required fields?</string>
    <string name="error_creating_duplicate">error – already in list?</string>
    <string name="error_creating_duplicate_tag_db">error – does this tag already exist?</string>
    <string name="success">successfully completed</string>
    <string name="wait">please wait</string>
    <string name="add">add</string>
    <string name="start">start</string>
    <string name="edit">edit</string>
    <string name="optional">%1$s (optional)</string>
    <string name="save">save</string>
    <string name="save_changes">save changes</string>
    <string name="discard_changes">discard changes</string>
    <string name="delete">delete</string>
    <string name="open">open</string>
    <string name="share">share</string>
    <string name="print">print</string>
    <string name="select_all">select all</string>
    <string name="selected">selected</string>
    <string name="items">items</string>
    <string name="welcome_collection">Welcome. Create a new filing box (+) or import a filing box backup (↓).</string>
    <string name="welcome_pack">There are no decks in this filing box.</string>
    <string name="welcome_pack_create">Create a new deck (+).</string>
    <string name="welcome_card">There are no flashcards in this deck.</string>
    <string name="welcome_card_create">Create a new flashcard (+).</string>
    <string name="all_packs">All decks</string>
    <string name="all_packs_desc">View the entire flashcard collection by decks</string>
    <string name="all_cards">All flashcards</string>
    <string name="all_cards_desc">View all flashcards of all decks</string>
    <string name="all_cards_desc_by_pack">View flashcards of this filing box</string>
    <string name="export_title">Export</string>
    <string name="export_all">Export filing boxes as backup</string>
    <string name="export_cards">Export filing box as backup</string>
    <string name="import_title">Import</string>
    <string name="import_cards">Import filing box(es) from backup</string>
    <string name="import_warn">import incomplete: not all entries could be imported</string>
    <string name="import_mode">Same-named filing boxes handling:</string>
    <string name="import_mode_skip">Do not import</string>
    <string name="import_mode_duplicates">Add new same-named entry</string>
    <string name="import_mode_integrate">Merge with first same-named filing box</string>
    <string name="import_simple_list">Import simple CSV</string>
    <string name="import_simple_list_info">Do you wish to import a simple self-created CSV file containing only flashcards in the following format: front, back and optional: notes?</string>
    <string name="import_simple_list_coll_name">000 Auto-Import</string>
    <string name="import_simple_list_coll_desc">Now you can edit this filing box.</string>
    <string name="import_simple_list_pack_name">Auto-Import-%1$s</string>
    <string name="import_simple_list_pack_desc">Now you can edit this deck or move the flashcards elsewhere by opening this deck from “%1$s”.</string>
    <string name="import_export_include_settings">Include app settings</string>
    <string name="import_export_include_media">Include media links</string>
    <string name="import_export_include_media_warn_no_files">Backup only contains media references, no files. You need to backup and restore them on your own.</string>
    <string name="import_export_lines_progress">~%d lines.</string>
    <string name="import_export_options">%s options</string>
    <string name="edit_collection">Edit filing box</string>
    <string name="edit_pack">Edit deck</string>
    <string name="edit_card">Edit flashcard</string>
    <string name="edit_card_media">manage attached media</string>
    <string name="edit_card_media_add">Add media</string>
    <string name="edit_card_tag">manage attached tags</string>
    <string name="edit_card_tag_add">Add tag</string>
    <string name="no_media">no media</string>
    <string name="no_tags">no tags</string>
    <string name="no_files_without_media">All files are in database</string>
    <string name="media_missing">media missing (file not found)</string>
    <string name="media_missing_dialog">media missing</string>
    <string name="media_missing_dialog_text">Abort and review missing files?</string>
    <string name="image_media">image media</string>
    <string name="image_media_print_number_and_limit">%1$d images attached. Print limit is: %2$d.</string>
    <string name="show_image_media">show images</string>
    <string name="show_all_media">show all media</string>
    <string name="all_media">all media</string>
    <string name="manage_media">Manage media</string>
    <string name="manage_files_without_media">Manage files not in database</string>
    <string name="media_linked_cards">Linked flashcards</string>
    <string name="media_no_card">No linked flashcards found. Delete medium?</string>
    <string name="select_folder_title">Select folder</string>
    <string name="select_folder_help">You need to select a folder for this app to save its media. It is recommended to use a folder exclusive to this app and backup it manually. Select one now?</string>
    <string name="select_folder_help_reselect">Selected media folder not accessible. Re-select it now?</string>
    <string name="select_folder_help_db_entries">Database contains media entries, but no folder ist selected. Select the folder now?</string>
    <string name="file_exists">A file with this name exists in the app media folder. You have the following options:</string>
    <string name="file_exists_title">file exists</string>
    <string name="file_exists_action_link">use existing instead of selected file</string>
    <string name="file_exists_action_new">rename and copy selected file</string>
    <string name="delete_file_title">delete file</string>
    <string name="delete_file_info">Media deleted from database. Also delete file from disk?</string>
    <string name="delete_file_without_media_info">Delete file from disk?</string>
    <string name="delete_multiple_cards">You are about to delete %1$d flashcards. Continue?</string>
    <plurals name="delete_multiple_packs">
        <item quantity="one">You are about to delete %1$d decks with %2$d flashcard. Continue?</item>
        <item quantity="other">You are about to delete %1$d decks with %2$d flashcards. Continue?</item>
    </plurals>
    <string name="delete_pack_with_cards">This deck contains flashcards. If you proceed these flashcards will also be deleted. Delete anyway?</string>
    <string name="delete_collection_with_packs">This filing box contains decks. If you proceed these decks and their flashcards will also be deleted. Delete anyway?</string>
    <string name="move">move</string>
    <string name="move_pack">move deck to another filing box</string>
    <string name="move_card">move flashcard to another deck</string>
    <string name="collection_or_pack_name_format">%2$s %1$s</string>
    <string name="collection_or_pack_name">name</string>
    <string name="collection_or_pack_desc">description</string>
    <string name="collection_or_pack_emoji">list preview icon (single emoji)</string>
    <string name="collection_or_pack_color_blue">blue</string>
    <string name="collection_or_pack_color_red">red</string>
    <string name="collection_or_pack_color_green">green</string>
    <string name="collection_or_pack_color_yellow">yellow</string>
    <string name="collection_name">of filing box</string>
    <string name="pack_name">of deck</string>
    <string name="new_collection">New filing box</string>
    <string name="new_pack">New deck</string>
    <string name="new_card">New flashcard</string>
    <string name="card_front">front</string>
    <string name="card_back">back</string>
    <string name="card_notes">notes</string>
    <string name="show_card_side">show card side</string>
    <string name="show_card_side_both">both sides</string>
    <string name="sort_random">Sort randomly</string>
    <string name="sort_normal">Sort by progress</string>
    <string name="sort_alphabetical">Sort alphabetical by flashcard front</string>
    <string name="sort_repetition">Sort by last repetition</string>
    <string name="sort_mixed">Sort by mixed learning criteria</string>
    <string name="sort_random_short">randomly</string>
    <string name="sort_normal_short">by progress</string>
    <string name="sort_mixed_short">by mixed criteria</string>
    <string name="sort_alphabetical_short">alphabetical by front</string>
    <string name="sort_repetition_short">by last repetition</string>
    <string name="sort_menu">Sort</string>
    <string name="collection_details">Filing box details</string>
    <string name="pack_details">Deck details</string>
    <string name="card_details">Flashcard details</string>
    <string name="card_plus">got it right</string>
    <string name="card_minus">got it wrong</string>
    <string name="skip">skip</string>
    <string name="back">back</string>
    <string name="tag">tag</string>
    <string name="tag_emoji">Emoji for tag</string>
    <string name="tags">tags</string>
    <string name="creation_date">creation time: %1$s</string>
    <string name="last_repetition_date">time of last repetition: %1$s</string>
    <string name="last_repetition_none">no repetition yet</string>
    <string name="card_known">progress</string>
    <string name="query_mode">Query mode</string>
    <string name="query_mode_title">%1$s (%2$d of %3$d)</string>
    <string name="query_show">show solution</string>
    <string name="query_notes">show notes</string>
    <string name="query_edit">edit flashcard</string>
    <string name="query_notes_title">flashcard notes</string>
    <string name="query_media_all" translatable="false">@string/show_all_media</string>
    <string name="query_media_all_title">all media files</string>
    <string name="query_media_image" translatable="false">@string/show_image_media</string>
    <string name="query_media_image_title">image files</string>
    <string name="advanced_search">Advanced query</string>
    <string name="advanced_search_packs">Decks</string>
    <string name="advanced_search_packs_all">All decks</string>
    <string name="advanced_search_packs_select">Select decks</string>
    <string name="advanced_search_tags_all">Include all flashcards (with or without tags)</string>
    <string name="advanced_search_tags_select">Include flashcards with at least one of the selected tags</string>
    <string name="advanced_search_progress">Select progress</string>
    <string name="advanced_search_progress_greater">greater or equal</string>
    <string name="advanced_search_progress_less">less or equal</string>
    <string name="advanced_search_progress_value">progress value</string>
    <string name="advanced_search_repetition">Select last repetition</string>
    <string name="advanced_search_repetition_newer">not longer than x days ago</string>
    <string name="advanced_search_repetition_older">longer than x days ago</string>
    <string name="advanced_search_repetition_value">last repetition value</string>
</resources>