<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_edit_24"
        android:onClick="editCard"
        android:orderInCategory="100"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_delete_24"
        android:onClick="deleteCard"
        android:orderInCategory="200"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="editCardMedia"
        android:orderInCategory="300"
        android:title="@string/edit_card_media"
        app:showAsAction="never" />
    <item
        android:id="@+id/move_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="moveCard"
        android:orderInCategory="400"
        android:title="@string/move"
        app:showAsAction="never" />
</menu>
