<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/advanced_search_packs"
                android:textColor="@color/default_text"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <RadioButton
                    android:id="@+id/advanced_search_packs_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advanced_search_packs_all"
                    android:textColor="@color/light_black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/advanced_search_packs_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advanced_search_packs_select"
                    android:textColor="@color/light_black"
                    android:textSize="16sp" />
            </RadioGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_advanced_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="30dp"
                android:background="@color/button"
                android:importantForAccessibility="no" />


            <LinearLayout
                android:id="@+id/advanced_search_container_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tags"
                    android:textColor="@color/default_text"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <RadioButton
                        android:id="@+id/advanced_search_tags_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/advanced_search_tags_all"
                        android:textColor="@color/light_black"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/advanced_search_tags_select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/advanced_search_tags_select"
                        android:textColor="@color/light_black"
                        android:textSize="16sp" />
                </RadioGroup>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rec_advanced_search_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="30dp"
                    android:background="@color/button"
                    android:importantForAccessibility="no" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/advanced_search_progress"
                android:textColor="@color/default_text"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <RadioButton
                    android:id="@+id/advanced_search_progress_less"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advanced_search_progress_less"
                    android:textColor="@color/light_black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/advanced_search_progress_greater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advanced_search_progress_greater"
                    android:textColor="@color/light_black"
                    android:textSize="16sp" />
            </RadioGroup>

            <EditText
                android:id="@+id/advanced_search_progress_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/advanced_search_progress_value"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/light_black"
                android:textColorHint="@color/light_black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="30dp"
                android:background="@color/button"
                android:importantForAccessibility="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/advanced_search_repetition"
                android:textColor="@color/default_text"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <RadioButton
                    android:id="@+id/advanced_search_repetition_newer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advanced_search_repetition_newer"
                    android:textColor="@color/light_black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/advanced_search_repetition_older"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advanced_search_repetition_older"
                    android:textColor="@color/light_black"
                    android:textSize="16sp" />
            </RadioGroup>

            <EditText
                android:id="@+id/advanced_search_repetition_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/advanced_search_repetition_value"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/light_black"
                android:textColorHint="@color/light_black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="30dp"
                android:background="@color/button"
                android:importantForAccessibility="no" />

            <Button
                android:id="@+id/advanced_search_go"
                style="@style/material_button"
                android:layout_gravity="center"
                android:text="@string/start"
                android:textColor="@color/button"
                android:textSize="@dimen/card_back_size_default" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
