<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center">

    <RadioGroup
        android:id="@+id/dia_import_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_mode"
            android:textColor="@color/light_black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/dia_import_radio_integrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/ijblue"
            android:text="@string/import_mode_integrate"
            android:textColor="@color/light_black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/dia_import_radio_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/ijblue"
            android:text="@string/import_mode_skip"
            android:textColor="@color/light_black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/dia_import_radio_duplicates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/ijblue"
            android:text="@string/import_mode_duplicates"
            android:textColor="@color/light_black"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/dia_import_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dia_import_radio"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:text="@string/start"
        android:textColor="@color/light_black"
        android:textSize="20sp" />
</RelativeLayout>
