<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/start_new_pack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:icon="@drawable/outline_add_24"
        android:onClick="startNewPack"
        android:orderInCategory="100"
        android:title="@string/new_pack"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/collection_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:icon="@drawable/outline_info_24"
        android:onClick="collectionDetails"
        android:orderInCategory="200"
        android:title="@string/collection_details"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/export_single"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:icon="@drawable/outline_file_upload_24"
        android:onClick="export"
        android:orderInCategory="200"
        android:title="@string/export_cards"
        app:showAsAction="ifRoom" />
</menu>
