<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:theme="@style/Theme.RBV">

    <TextView
        android:id="@+id/dia_file_exists_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/file_exists"
        android:textColor="@color/warn_red"
        android:textSize="25sp" />

    <Button
        android:id="@+id/dia_file_exists_link"
        style="@style/material_button"
        android:layout_below="@id/dia_file_exists_desc"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/file_exists_action_link"
        android:textColor="@color/light_black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/dia_file_exists_new"
        style="@style/material_button"
        android:layout_below="@id/dia_file_exists_link"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/file_exists_action_new"
        android:textColor="@color/light_black"
        android:textSize="20sp" />
</RelativeLayout>
