<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/root_settings"
    android:padding="10dp"
    android:gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/settings_default_sort"
                android:textColor="@color/dark_grey"/>

            <RadioGroup
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_normal"
                    android:onClick="setSortNormal"
                    android:id="@+id/settings_sort_normal"
                    android:textColor="@color/light_black"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_random"
                    android:onClick="setSortRandom"
                    android:id="@+id/settings_sort_random"
                    android:textColor="@color/light_black"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_alphabetical"
                    android:onClick="setSortAlphabetical"
                    android:id="@+id/settings_sort_alphabetical"
                    android:textColor="@color/light_black" />

            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>